--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "audio-decode": "^2.2.2",
     "axios": "^1.3.3",
-    "baileys": "git+https://lyfe00011-admin@bitbucket.org/lyfe00011/baileys.git#main",
+    "baileys": "git+https://lyfe00011-admin@bitbucket.org/lyfe00011/baileys.git",
     "browser-id3-writer": "^4.4.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie": "^0.5.0",
@@ -35,11 +35,11 @@
     "pdfkit": "^0.13.0",
     "pg": "^8.7.3",
     "pino-pretty": "^9.1.1",
-    "pm2": "^6.0.8",
+    "pm2": "^6.0.5",
     "qrcode-reader": "^1.0.4",
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.21.4",
-    "sharp": "^0.32.6",
+    "sharp": "^0.33.5",
     "simple-git": "^3.16.1",
     "sqlite3": "^5.0.11",
     "translate-google-api": "^1.0.4",
